--- a/src/databasecaudio/databasecaudio/databasecaudio.vcxproj.filters
+++ b/src/databasecaudio/databasecaudio/databasecaudio.vcxproj.filters
@@ -13,6 +13,12 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Taglib">
+      <UniqueIdentifier>{533eadb1-c9ed-4d54-a845-ddfd650dbae5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\sqlite">
+      <UniqueIdentifier>{3bfd424a-d434-4bdd-9ec3-bf8f164270aa}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -23,21 +29,75 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ahm.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="taglib\tpropertymap.h">
+      <Filter>Header Files\Taglib</Filter>
     </ClInclude>
-    <ClInclude Include="..\sqlite3.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="taglib\trefcounter.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tstring.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tstringlist.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tutils.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\unicode.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\wavpackfile.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\wavpackproperties.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\taglib.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tbytevector.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tbytevectorlist.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tbytevectorstream.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tdebug.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tdebuglistener.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tfile.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tfilestream.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tiostream.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tlist.h">
+      <Filter>Header Files\Taglib</Filter>
+    </ClInclude>
+    <ClInclude Include="taglib\tmap.h">
+      <Filter>Header Files\Taglib</Filter>
     </ClInclude>
     <ClInclude Include="..\sqlite3ext.h">
+      <Filter>Header Files\sqlite</Filter>
+    </ClInclude>
+    <ClInclude Include="..\sqlite3.h">
+      <Filter>Header Files\sqlite</Filter>
+    </ClInclude>
+    <ClInclude Include="ahm.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="..\sqlite3.lib" />
     <Library Include="..\tag.lib" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\tag.exp" />
   </ItemGroup>
 </Project>
