--- a/src/databasecaudio/databasecaudio/databasecaudio.vcxproj
+++ b/src/databasecaudio/databasecaudio/databasecaudio.vcxproj
@@ -20,12 +20,14 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -76,13 +78,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="audio_library_management.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="audioLibrary.cpp" />
+    <ClCompile Include="SongData.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\sqlite3.h" />
-    <ClInclude Include="..\sqlite3ext.h" />
     <ClInclude Include="ahm.h" />
+    <ClInclude Include="audioManagement.h" />
+    <ClInclude Include="SongData.h" />
     <ClInclude Include="taglib\taglib.h" />
     <ClInclude Include="taglib\tbytevector.h" />
     <ClInclude Include="taglib\tbytevectorlist.h" />
@@ -104,7 +107,6 @@
     <ClInclude Include="taglib\wavpackproperties.h" />
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\sqlite3.lib" />
     <Library Include="..\tag.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
