--- a/src/databasecaudio/databasecaudio/databasecaudio.vcxproj
+++ b/src/databasecaudio/databasecaudio/databasecaudio.vcxproj
@@ -20,14 +20,14 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
-    <PlatformToolset>v110</PlatformToolset>
+    <PlatformToolset>v100</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -85,7 +85,10 @@
   <ItemGroup>
     <ClInclude Include="ahm.h" />
     <ClInclude Include="audioManagement.h" />
+    <ClInclude Include="bass24\bass.h" />
     <ClInclude Include="SongData.h" />
+    <ClInclude Include="taglib\fileref.h" />
+    <ClInclude Include="taglib\tag.h" />
     <ClInclude Include="taglib\taglib.h" />
     <ClInclude Include="taglib\tbytevector.h" />
     <ClInclude Include="taglib\tbytevectorlist.h" />
