Reorganized stuff. Added more testing code.

--- a/src/databasecaudio/databasecaudio/databasecaudio.vcxproj.filters
+++ b/src/databasecaudio/databasecaudio/databasecaudio.vcxproj.filters
@@ -30,6 +30,15 @@
     <ClCompile Include="SongData.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="tcp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="udp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="multicast.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="taglib\tpropertymap.h">
